# boilerplate-TextRenderer-OpenGL

./: CMakeLists.txt  main.cpp
shader/: shader.h
